modified and deleted some files

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -10,10 +10,10 @@
 ### Choose between default, arrows-only, arrows-all, all and none
 extra-keys-style = all
 
-### Default extra-key configuration
+### Extra-key configuration
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
-### Two rows with more keys
+### Two rows with more keys: Default
 # extra-keys = [['ESC','/','-','HOME','UP','END','PGUP'], \
 #               ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN']]
 
@@ -89,7 +89,11 @@ back-key=back
 # Cursor
 ###############
 
-### Cursor blinking rater
+### Cursor style: block is default
+#terminal-cursor-style=underline
+terminal-cursor-style=bar
+
+### Cursor blinking rate
 terminal-cursor-blink-rate=600
 
 ###############
@@ -101,3 +105,17 @@ enforce-char-based-input = true
 
 ### ctrl+space (for marking text in emacs) does not work on some devices
 #ctrl-space-workaround = true
+
+###############
+# Session toast
+###############
+
+### Disable terminal session change toast
+disable-terminal-session-change-toast=true
+
+###############
+# Transscript rows
+###############
+
+### Adjust terminal transscript rows:100-50000
+terminal-transcript-rows=5000
