addet some configs

--- a/.npmrc
+++ b/.npmrc
@@ -47,7 +47,7 @@ cache=/data/data/com.termux/files/home/.cache/npm
 ; git-tag-version=true
 ; commit-hooks=true
 ; global=false
-globalconfig=/data/data/com.termux/files/usr/etc/npmrc
+; globalconfig=/data/data/com.termux/files/usr/etc/npmrc
 ; global-style=false
 ; group=11491
 ; ham-it-up=false
