--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -63,7 +63,7 @@ set vcs_backend_bzr disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images true
+set preview_images false
 
 # Set the preview image method. Supported methods:
 #
@@ -98,7 +98,7 @@ set colorscheme monokai
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
-set preview_files true
+set preview_files false
 set preview_directories true
 set collapse_preview true
 
@@ -122,14 +122,14 @@ set dirname_in_tabs false
 set mouse_enabled true
 
 # Display the file size in the main column or status bar?
-set display_size_in_main_column true
+set display_size_in_main_column false
 set display_size_in_status_bar true
 
 # Display the free disk space in the status bar?
 set display_free_space_in_status_bar true
 
 # Display files tags in all columns or only in main column?
-set display_tags_in_all_columns true
+set display_tags_in_all_columns false
 
 # Set a title for the window? Updates both `WM_NAME` and `WM_ICON_NAME`
 # properties.
@@ -166,7 +166,7 @@ set padding_right true
 # This helps to synchronize bookmarks between multiple ranger
 # instances but leads to *slight* performance loss.
 # When false, bookmarks are saved when ranger is exited.
-set autosave_bookmarks true
+set autosave_bookmarks false
 
 # You can display the "real" cumulative size of directories by using the
 # command :get_cumulative_size or typing "dc".  The size is expensive to
@@ -203,7 +203,7 @@ set show_selection_in_titlebar true
 # The delay that ranger idly waits for user input, in milliseconds, with a
 # resolution of 100ms.  Lower delay reduces lag between directory updates but
 # increases CPU load.
-set idle_delay 2000
+set idle_delay 1500
 
 # When the metadata manager module looks for metadata, should it only look for
 # a ".metadata.json" file in the current directory, or do a deep search and
@@ -221,7 +221,7 @@ set nested_ranger_warning true
 # You can set local options that only affect a single directory.
 
 # Examples:
-# setlocal path=~/downloads sort mtime
+setlocal path=~/downloads sort mtime
 
 # ===================================================================
 # == Command Aliases in the Console
