--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -21,7 +21,7 @@
 # ===================================================================
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 1,2,4
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -98,7 +98,7 @@ set colorscheme monokai
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
-set preview_files false
+set preview_files true
 set preview_directories true
 set collapse_preview true
 
@@ -116,7 +116,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders true
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -175,7 +175,7 @@ set autosave_bookmarks false
 set autoupdate_cumulative_size false
 
 # Turning this on makes sense for screen readers:
-set show_cursor true
+set show_cursor false
 
 # One of: size, natural, basename, atime, ctime, mtime, type, random
 set sort natural
@@ -314,20 +314,20 @@ map <A-}> move_parent 1
 map <A-{> move_parent -1
 
 map <C-x>gh cd ~
-map <C-x>ge cd /etc
-map <C-x>gu cd /usr
-map <C-x>gd cd /dev
+map <C-x>ge cd $PREFIX/etc
+map <C-x>gu cd $PREFIX/../usr
+#map <C-x>gd cd /dev
 map <C-x>gl cd -r .
 map <C-x>gL cd -r %f
-map <C-x>go cd /opt
-map <C-x>gv cd /var
-map <C-x>gm cd /media
-map <C-x>gM cd /mnt
-map <C-x>gs cd /srv
-map <C-x>gr cd /
+#map <C-x>go cd /opt
+map <C-x>gv cd $PREFIX/var
+#map <C-x>gm cd /media
+#map <C-x>gM cd /mnt
+map <C-x>gs cd $PREFIX/share
+map <C-x>gr cd $PREFIX/..
 map <C-x>gR eval fm.cd(ranger.RANGERDIR)
-map <C-x>g/ cd /
-map <C-x>g? cd /usr/share/doc/ranger
+map <C-x>g/ cd $PREFIX/..
+map <C-x>g? cd $PREFIX/share/doc/ranger
 
 # External Programs
 map <C-x><C-f>  edit
