fixed shebangs for termux

--- a/.config/mc/panels.ini
+++ b/.config/mc/panels.ini
@@ -32,4 +32,4 @@ list_format=full
 
 [Dirs]
 current_is_left=true
-other_dir=/data/data/com.termux/files/home/.config/mc
+other_dir=/storage/emulated/0/search
