--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -1,30 +1,30 @@
-# https://github.com/chriskempson/base16-xresources/blob/master/base16-shapeshifter.dark.256.xresources
-# Base16 shapeshifter
-# Scheme: Tyler Benziger (http://tybenz.com)
-foreground=#ababab
-background=#000000
-cursor=#ababab
+# https://github.com/chriskempson/base16-xresources/blob/master/base16-3024.dark.256.xresources
+# Base16 3024
+# Scheme: Jan T. Sott (http://github.com/idleberg)
+foreground=#a5a2a2
+background=#090300
+cursor=#a5a2a2
 
-color0=#000000
-color1=#e92f2f
-color2=#0ed839
-color3=#dddd13
-color4=#3b48e3
-color5=#f996e2
-color6=#23edda
-color7=#ababab
-color8=#343434
-color9=#e92f2f
-color10=#0ed839
-color11=#dddd13
-color12=#3b48e3
-color13=#f996e2
-color14=#23edda
-color15=#f9f9f9
+color0=#090300
+color1=#db2d20
+color2=#01a252
+color3=#fded02
+color4=#01a0e4
+color5=#a16a94
+color6=#b5e4f4
+color7=#a5a2a2
+color8=#5c5855
+color9=#db2d20
+color10=#01a252
+color11=#fded02
+color12=#01a0e4
+color13=#a16a94
+color14=#b5e4f4
+color15=#f7f7f7
 
-color16=#e09448
-color17=#69542d
-color18=#040404
-color19=#102015
-color20=#555555
-color21=#e0e0e0
+color16=#e8bbd0
+color17=#cdab53
+color18=#3a3432
+color19=#4a4543
+color20=#807d7c
+color21=#d6d5d4
