--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -60,7 +60,7 @@ shortcut.next-session = ctrl + 2
 shortcut.previous-session = ctrl + 1
 
 ### Rename a session with (for example) ctrl + n
-shortcut.rename-session = alt + n
+#shortcut.rename-session = ctrl + n
 
 ###############
 # Bell key
