added .elinks and some configs done

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -119,3 +119,10 @@ disable-terminal-session-change-toast=true
 
 ### Adjust terminal transscript rows:100-50000
 terminal-transcript-rows=5000
+
+###############
+# External apps
+###############
+
+### (Dis)Allow external apps (false/true)
+allow-external-apps=true
