--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -104,7 +104,7 @@ terminal-cursor-blink-rate=600
 enforce-char-based-input = true
 
 ### ctrl+space (for marking text in emacs) does not work on some devices
-#ctrl-space-workaround = true
+ctrl-space-workaround = true
 
 ###############
 # Session toast
