--- a/.lynxrc
+++ b/.lynxrc
@@ -1,5 +1,5 @@
 # Lynx User Defaults File
-# 
+#
 # This file contains options saved from the Lynx Options Screen (normally
 # with the 'o' key).  To save options with that screen, you must select the
 # checkbox:
@@ -11,12 +11,12 @@
 #
 # You may also use the command-line option "-forms_options", which displays
 # the simpler Options Menu instead.  Save options with that using the '>' key.
-# 
+#
 # There is normally no need to edit this file manually, since the defaults
 # here can be controlled from the Options Screen, and the next time options
 # are saved from the Options Screen this file will be completely rewritten.
 # You have been warned...
-# 
+#
 # If you are looking for the general configuration file - it is normally
 # called "lynx.cfg".  It has different content and a different format.
 # It is not this file.
@@ -133,7 +133,7 @@ dir_list_order=ORDER_BY_NAME
 # (if implemented).  The default is "MIXED_STYLE", which sorts both
 # files and directories together.  "FILES_FIRST" lists files first and
 # "DIRECTORIES_FIRST" lists directories first.
-dir_list_style=MIXED_STYLE
+dir_list_style=DIRECTORIES_FIRST
 
 # If emacs_keys is to "on" then the normal EMACS movement keys:
 #   ^N = down    ^P = up
@@ -179,13 +179,13 @@ keypad_mode=LINKS_ARE_NUMBERED
 # lineedit_mode specifies the key binding used for inputting strings in
 # prompts and forms.  If lineedit_mode is set to "Default Binding" then
 # the following control characters are used for moving and deleting:
-# 
+#
 #              Prev  Next       Enter = Accept input
 #    Move char: <-    ->        ^G    = Cancel input
 #    Move word: ^P    ^N        ^U    = Erase line
 #  Delete char: ^H    ^R        ^A    = Beginning of line
 #  Delete word: ^B    ^F        ^E    = End of line
-# 
+#
 # Current lineedit modes are:
 #    Default Binding
 #    Alternate Bindings
@@ -336,7 +336,7 @@ verbose_images=on
 # will be enabled.  These keys are only lower case.
 # Capital 'H', 'J' and 'K will still activate help, jump shortcuts,
 # and the keymap display, respectively.
-vi_keys=off
+vi_keys=on
 
 # The visited_links setting controls how Lynx organizes the information
 # in the Visited Links Page.
