--- a/.config/npm/.npmrc
+++ b/.config/npm/.npmrc
@@ -69,8 +69,7 @@ globalconfig=/data/data/com.termux/files/etc/npmrc
 ; heading=npm
 ; https-proxy=null
 ; if-present=false
-; ignore-scripts=false
-;
+ignore-scripts=false
 ; include-staged=false
 ; init-author-email=
 ; init-author-name=
@@ -133,7 +132,7 @@ globalconfig=/data/data/com.termux/files/etc/npmrc
 ; searchlimit=20
 ; searchopts=
 ; searchstaleness=900
-; shell=/data/data/com.termux/files/usr/bin/zsh
+shell=/data/data/com.termux/files/usr/bin/zsh
 ; shrinkwrap=true
 ; sign-git-commit=false
 ; sign-git-tag=false
@@ -144,7 +143,7 @@ globalconfig=/data/data/com.termux/files/etc/npmrc
 ; tag=latest
 ; tag-version-prefix=v
 ; timing=false
-; tmp=/data/data/com.termux/files/usr/tmp
+tmp=/data/data/com.termux/files/usr/tmp
 ; umask=0
 ; unicode=true
 ; update-notifier=true
