--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -166,7 +166,7 @@ set padding_right true
 # This helps to synchronize bookmarks between multiple ranger
 # instances but leads to *slight* performance loss.
 # When false, bookmarks are saved when ranger is exited.
-set autosave_bookmarks false
+set autosave_bookmarks true
 
 # You can display the "real" cumulative size of directories by using the
 # command :get_cumulative_size or typing "dc".  The size is expensive to
@@ -264,19 +264,37 @@ map <A-x>  console
 map <A-!>  console shell%space
 map <A-f> chain draw_possible_programs; console open_with%space
 
-# Change the line mode
+# Change the line mode default
 map <C-x>mf linemode filename
 map <C-x>mi linemode fileinfo
 map <C-x>mp linemode permissions
 map <C-x>mt linemode metatitle
 
-# Tagging / Marking
+# Change the line mode custom
+map Mf linemode filename
+map Mi linemode fileinfo
+map Mm linemode mtime
+map Mp linemode permissions
+map Ms linemode sizemtime
+map Mt linemode metatitle
+
+# Tagging / Marking Default
 map <C-x>t<any> tag_toggle tag=%any
 map <C-_>t      tag_remove
 map <Space>     mark_files toggle=True
 map <C-Space>   toggle_visual_mode
 
-# For the nostalgics: Midnight Commander bindings
+# Tagging / Marking Custom
+map t       tag_toggle
+map ut      tag_remove
+map "<any>  tag_toggle tag=%any
+map <Space> mark_files toggle=True
+map v       mark_files all=True toggle=True
+map uv      mark_files all=True val=False
+map V       toggle_visual_mode
+map uV      toggle_visual_mode reverse=True
+
+#" For the nostalgics: Midnight Commander bindings
 map <F1> help
 map <F3> display_file
 map <F4> edit
@@ -554,4 +572,11 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 # Basic
 tmap <C-l> redraw_window
 tmap <C-g> taskview_close
+default_linemode devicons
+
+# find
+map <C-f> fzf_select
+
+# devicons
+default_linemode devicons
 default_linemode devicons
