--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -6,8 +6,11 @@
     "basename": true,
     "colorscheme": "monokai-dark",
     "diffgutter": true,
+    "filemanager.compressparent": false,
+    "filemanager.showignored": false,
     "keepautoindent": true,
     "keymenu": true,
+    "literate": false,
     "mkparents": true,
     "parsecursor": true,
     "permbackup": true,
