--- a/.config/w3m/config
+++ b/.config/w3m/config
@@ -1,8 +1,8 @@
-tabstop 8
+tabstop 5
 indent_incr 4
 pixel_per_char 7
 pixel_per_line 14
-frame 0
+frame 1
 target_self 0
 open_tab_blank 1
 open_tab_dl_list 0
@@ -14,10 +14,10 @@ ext_dirlist 1
 dirlist_cmd file:///$LIB/dirlist.cgi
 use_dictcommand 1
 dictcommand file:///$LIB/w3mdict.cgi
-multicol 0
+multicol 1
 alt_entity 0
 graphic_char 0
-display_borders 0
+display_borders 1
 fold_textarea 0
 display_ins_del 1
 ignore_null_img_alt 1
@@ -68,34 +68,34 @@ decode_cte 0
 auto_uncompress 0
 preserve_timestamp 1
 keymap_file keymap
-document_root 
-personal_document_root 
-cgi_bin 
-index_file 
+document_root
+personal_document_root
+cgi_bin
+index_file
 mime_types ~/.mime.types, /data/data/com.termux/files/usr/etc/mime.types
 mailcap ~/.w3m/mailcap, /data/data/com.termux/files/usr/etc/w3m/mailcap
 urimethodmap ~/.w3m/urimethodmap, /data/data/com.termux/files/usr/etc/w3m/urimethodmap
 editor micro
 mailto_options 1
-mailer 
+mailer
 extbrowser lynx
 extbrowser2 elinks
 extbrowser3 termux-url-opener
-extbrowser4 
-extbrowser5 
-extbrowser6 
-extbrowser7 
-extbrowser8 
-extbrowser9 
+extbrowser4
+extbrowser5
+extbrowser6
+extbrowser7
+extbrowser8
+extbrowser9
 bgextviewer 1
 use_lessopen 1
-passwd_file ~/.w3m/passwd
+passwd_file ~/.config/w3m/passwd
 disable_secret_security_check 1
-ftppasswd 
+ftppasswd
 ftppass_hostnamegen 1
 pre_form_file ~/.config/w3m/pre_form
 siteconf_file ~/.config/w3m/siteconf
-user_agent 
+user_agent
 no_referer 0
 accept_language en;q=1.0
 accept_encoding gzip, compress, bzip, bzip2, deflate
@@ -106,29 +106,29 @@ default_url 0
 follow_redirection 10
 meta_refresh 0
 dns_order 0
-nntpserver 
-nntpmode 
+nntpserver
+nntpmode
 max_news 50
 use_proxy 0
-http_proxy 
-https_proxy 
-ftp_proxy 
-no_proxy 
+http_proxy
+https_proxy
+ftp_proxy
+no_proxy
 noproxy_netaddr 1
 no_cache 0
 ssl_forbid_method 2, 3
 ssl_verify_server 1
-ssl_cert_file 
-ssl_key_file 
-ssl_ca_path 
-ssl_ca_file 
+ssl_cert_file
+ssl_key_file
+ssl_ca_path
+ssl_ca_file
 use_cookie 1
 show_cookie 0
 accept_cookie 1
 accept_bad_cookie 0
-cookie_reject_domains 
-cookie_accept_domains github.com duckduckgo.com 
-cookie_avoid_wrong_number_of_dots 
+cookie_reject_domains
+cookie_accept_domains github.com duckduckgo.com
+cookie_avoid_wrong_number_of_dots
 display_charset UTF-8
 document_charset UTF-8
 auto_detect 2
