--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -1,5 +1,4 @@
-### After making changes and saving you need to run `termux-reload-settings`
-### to update the terminal.  All information here can also be found on the
+### After making changes and saving you need to run `termux-reload-settings` to update the terminal. All information here can also be found on the
 ### wiki: https://wiki.termux.com/wiki/Terminal_Settings
 
 ###############
@@ -36,7 +35,7 @@ extra-keys-style = all
 ###############
 
 ### Force black colors for drawer and dialogs
-use-black-ui = true
+#use-black-ui = true
 
 ###############
 # Full screen
@@ -51,7 +50,7 @@ use-fullscreen-workaround = true
 ###############
 
 ### Open a new terminal with ctrl + t (volume down + t)
-shortcut.create-session = ctrl + t
+# shortcut.create-session = ctrl + t
 
 ### Go one session down with (for example) ctrl + 2
 shortcut.next-session = ctrl + 2
@@ -104,7 +103,7 @@ terminal-cursor-blink-rate=600
 enforce-char-based-input = true
 
 ### ctrl+space (for marking text in emacs) does not work on some devices
-ctrl-space-workaround = true
+#ctrl-space-workaround = true
 
 ###############
 # Session toast
