--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -12,12 +12,12 @@ print_info() {
     info "Shell" shell
     info "Resolution" resolution
     info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
+    # info "WM" wm
+    # info "WM Theme" wm_theme
     info "Theme" theme
-    info "Icons" icons
+    # info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+    # info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
@@ -26,13 +26,13 @@ print_info() {
     info "CPU Usage" cpu_usage
     info "Disk" disk
     # info "Battery" battery
-    info "Font" font
+    # info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
     info "Public IP" public_ip
     info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+    info "Locale" locale  # This only works on glibc systems.
 
     info cols
 }
@@ -116,7 +116,7 @@ uptime_shorthand="tiny"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
 
 # Change memory output unit.
 #
@@ -195,7 +195,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -232,7 +232,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="on"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -283,7 +283,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
 # Resolution
@@ -313,7 +313,7 @@ refresh_rate="on"
 # Example:
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
-gtk_shorthand="on"
+gtk_shorthand="off"
 
 
 # Enable/Disable gtk2 Theme / Icons / Font
@@ -563,7 +563,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" ="
 
 
 # Color Blocks
