--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,7 @@
 set -g base-index 1
 
 # Set the base index for panes to 1 instead of 0
+set -g pane-base-index 1
 setw -g pane-base-index 1
 
 # auto window rename
@@ -26,25 +27,30 @@ set -g set-titles on
 set -g focus-events on
 
 # enable terminal clipboard instead of external
-# set -g set-clipboard on
+set -g set-clipboard on
 set -g buffer-limit 10
 
 set -g history-limit 5000
 set -g display-time 3000
 set -g display-panes-time 2000
 set -g status-interval 5
+setw -g clock-mode-colour colour1
+
+# Cursor shape (ssh)
+# set-option -g xterm-keys on
+# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
 
 # Vim compatability
 set -sg escape-time 5 # fix vim esc delay
 
 # This tmux statusbar was created by tmuxline.vim
-# on Thu, 19 Aug 2021
+# on Thu, 19 Aug 2021 (gruvbox-dark)
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#ebdbb2,bg=#504945"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=#504945"
+set -g pane-active-border-style "fg=#7c6f64"
 set -g status-style "none,bg=#3c3836"
 set -g message-style "fg=#ebdbb2,bg=#504945"
 set -g pane-border-style "fg=#3c3836"
@@ -65,13 +71,11 @@ setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscor
 # git@github.com/user/plugin
 # git@bitbucket.cmo/user/plugin
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'tmux-plugins/tmux-pain-control'
-# set -g @plugin 'MikeDacre/tmux-zsh-vim-titles'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 run -b '~/.config/tmux/plugins/tpm/tpm'
 
 # plugin settings
