--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,4 +1,5 @@
 add_newline = false
+scan_timeout = 10
 
 [line_break]
 disabled = false
@@ -6,7 +7,7 @@ disabled = false
 [character]
 success_symbol = '[❯](bold green)'
 error_symbol = '[✗](bold red)'
-vicmd_symbol = '[\[\]](bold green)'
+vicmd_symbol = '[\[\]](bold #A3BE8C)'
 
 [username]
 format = '[➜ ](red)[$user]($style)[@]'
@@ -16,13 +17,15 @@ show_always = false
 [cmd_duration]
 min_time = 1000
 format = ' took [$duration]($style)'
-disabled = true
+disabled = false
 
 [directory]
-truncation_length = 3
 format = '[$path]($style blue italic) [$lock_symbol]($lock_style)'
+read_only = ' 🔒'
+fish_style_pwd_dir_length = 1
+truncation_length = 3
+read_only_style = "bold #8FBCBB"
 truncate_to_repo = true
-read_only = ' '
 
 [hostname]
 ssh_only = true
@@ -30,6 +33,51 @@ format = '[$hostname in]($style) '
 trim_at = '-'
 style = '#5fff5f'
 disabled = false
+
+[git_branch]
+format = "[$symbol](yellow bold)[$branch:$remote_name/$remote_branch]($style)"
+# format = '[$symbol](yellow bold)[$branch]($style) '
+symbol = ' '
+# symbol = " "
+always_show_remote = true
+only_attached = false
+truncation_length = 20
+
+[git_status]
+# format = '([\[$all_status$ahead_behind\]]($style) )'
+ahead = '⇡${count}(#EBCB8B) '
+diverged = '⇕⇡${ahead_count}⇣${behind_count}(#EBCB8B) '
+behind = '⇣[$count](#EBCB8B) '
+format = "[$all_status$ahead_behind]($style)"
+conflicted = "=×[$count](#D08770) "
+untracked = "?×[$count](#EBCB8B) "
+stashed = '\$×[$count](#5E81AC) '
+modified = "!×[$count](#8FBCBB) "
+# staged = "+×[$count](#A3BE8C) "
+renamed = "»×[$count](#D08770) "
+deleted = "✘×[$count](#BF616A) "
+# style = "bold #D08770"
+disabled = false
+staged = '[++\($count\)](#A3BE8C)'
+
+[git_commit]
+# format = "[\\($hash\\)]($style)[\\($tag_symbol$tag\\)]($style)"
+style = "bold #D08770"
+commit_hash_length = 8
+disabled = false
+only_detached = false
+tag_symbol = "🔖 "
+tag_disabled = false
+
+[git_metrics]
+added_style = "bold #A3BE8C"
+deleted_style = "bold #BF616A"
+format = '[+$added]($added_style)|[-$deleted]($deleted_style) '
+disabled =false
+
+[git_state]
+disabled = false
+
 [env_var.USER]
 disabled = true
 
@@ -62,17 +110,6 @@ disabled = true
 
 [elm]
 disabled = true
-
-[git_branch]
-symbol = ' '
-
-[git_metrics]
-format = '[+$added]($added_style)|[-$deleted]($deleted_style) '
-
-[git_status]
-ahead = '⇡${count}'
-diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
 
 [golang]
 disabled = true
@@ -108,7 +145,7 @@ disabled = true
 disabled = true
 
 [package]
-disabled = true
+disabled = false
 
 [perl]
 disabled = true
