added git config and gruvbox colorscheme for micro & termux (man, i really need a clean up)

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,7 +27,7 @@ set -g set-titles on
 set -g focus-events on
 
 # enable terminal clipboard instead of external
-set -g set-clipboard on
+# set -g set-clipboard on
 set -g buffer-limit 10
 
 set -g history-limit 5000
@@ -38,7 +38,7 @@ setw -g clock-mode-colour colour1
 
 # Cursor shape (ssh)
 # set-option -g xterm-keys on
-# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
+# set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[1 q"
 
 # Vim compatability
 set -sg escape-time 5 # fix vim esc delay
@@ -82,7 +82,9 @@ run -b '~/.config/tmux/plugins/tpm/tpm'
 set -g @resurrect-dir '~/.config/tmux/resurrect'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-save-interval '10'
+#Restore all programs (dangerous!):
+# set -g @resurrect-processes ':all:'
+set -g @continuum-save-interval '5'
 # set -g @continuum-boot 'on'
 # set -g @continuum-boot-options 'fullscreen'
-# set -g @continuum-restore 'on'
+set -g @continuum-restore 'on'
