--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,79 +1,80 @@
 add_newline = false
-scan_timeout = 10
+# scan_timeout = 10
 
 [line_break]
 disabled = false
 
 [character]
 success_symbol = '[❯](bold green)'
-error_symbol = '[✗](bold red)'
-vicmd_symbol = '[\[\]](bold #A3BE8C)'
+error_symbol = '[❮](bold red)' # ✗
+vicmd_symbol = '[\[\]](#A3BE8C)'
+
+[status]
+style = "red"
+symbol = "💥 " # 💣
+format = '[\[$symbol$status\]]($style) '
+disabled = false
 
 [username]
-format = '[➜ ](red)[$user]($style)[@]'
-style_user = '#5fff5f'
+format = '[$user]($style)[@]'
+style_user = '#4fdf4f'
 show_always = false
 
 [cmd_duration]
 min_time = 1000
 format = ' took [$duration]($style)'
 disabled = false
+show_milliseconds = true
 
 [directory]
-format = '[$path]($style blue italic) [$lock_symbol]($lock_style)'
+format = '[$path]($style blue italic)[$read_only]($read_only_style) ' #[$lock_symbol]($lock_style)
 read_only = ' 🔒'
-fish_style_pwd_dir_length = 1
-truncation_length = 3
 read_only_style = "bold #8FBCBB"
+fish_style_pwd_dir_length = 1
+truncation_length = 1
 truncate_to_repo = true
 
 [hostname]
 ssh_only = true
 format = '[$hostname in]($style) '
 trim_at = '-'
-style = '#5fff5f'
+style = '#4fdf4f'
 disabled = false
 
 [git_branch]
-format = "[$symbol](yellow bold)[$branch:$remote_name/$remote_branch]($style)"
-# format = '[$symbol](yellow bold)[$branch]($style) '
+format = '[$symbol](yellow bold)[$branch:$remote_name/$remote_branch]($style)'
 symbol = ' '
-# symbol = " "
 always_show_remote = true
 only_attached = false
 truncation_length = 20
 
 [git_status]
-# format = '([\[$all_status$ahead_behind\]]($style) )'
 ahead = '⇡${count}(#EBCB8B) '
 diverged = '⇕⇡${ahead_count}⇣${behind_count}(#EBCB8B) '
 behind = '⇣[$count](#EBCB8B) '
-format = "[$all_status$ahead_behind]($style)"
-conflicted = "=×[$count](#D08770) "
-untracked = "?×[$count](#EBCB8B) "
+format = '[$all_status$ahead_behind]($style)'
+conflicted = '=×[$count](#D08770) '
+untracked = '?×[$count](#EBCB8B) '
 stashed = '\$×[$count](#5E81AC) '
-modified = "!×[$count](#8FBCBB) "
-# staged = "+×[$count](#A3BE8C) "
-renamed = "»×[$count](#D08770) "
-deleted = "✘×[$count](#BF616A) "
-# style = "bold #D08770"
+modified = '!×[$count](#8FBCBB) '
+renamed = '»×[$count](#D08770) '
+deleted = '✘×[$count](#BF616A) '
 disabled = false
 staged = '[++\($count\)](#A3BE8C)'
 
 [git_commit]
-# format = "[\\($hash\\)]($style)[\\($tag_symbol$tag\\)]($style)"
-style = "bold #D08770"
+style = 'bold #D08770'
 commit_hash_length = 8
 disabled = false
 only_detached = false
-tag_symbol = "🔖 "
+tag_symbol = '🔖 '
 tag_disabled = false
 
 [git_metrics]
-added_style = "bold #A3BE8C"
-deleted_style = "bold #BF616A"
+added_style = 'bold #A3BE8C'
+deleted_style = 'bold #BF616A'
 format = '[+$added]($added_style)|[-$deleted]($deleted_style) '
-disabled =false
+disabled = false
 
 [git_state]
 disabled = false
@@ -145,7 +146,7 @@ disabled = true
 disabled = true
 
 [package]
-disabled = false
+disabled = true
 
 [perl]
 disabled = true
