--- a/.local/share/dotbare/.config/starship/starship.toml
+++ b/.local/share/dotbare/.config/starship/starship.toml
@@ -1,28 +1,37 @@
 add_newline = false
+# scan_timeout = 10
 
 [line_break]
 disabled = false
 
 [character]
 success_symbol = '[❯](bold green)'
-error_symbol = '[✗](bold red)'
-vicmd_symbol = '[\[\]](bold green)'
+error_symbol = '[❮](bold red)' # ✗
+vicmd_symbol = '[\[\]](#A3BE8C)'
+
+[status]
+style = "red"
+symbol = "💥 " # 💣
+format = '[\[$symbol$status\]]($style) '
+disabled = false
 
 [username]
 format = '[➜ ](red)[$user]($style)[@]'
 style_user = '#5fff5f'
 show_always = false
 
-[cmd_duration]
-min_time = 1000
-format = ' took [$duration]($style)'
-disabled = true
+# [cmd_duration]
+# min_time = 1_000
+# format = ' took [$duration]($style)'
+# disabled = false
 
 [directory]
-truncation_length = 3
 format = '[$path]($style blue italic) [$lock_symbol]($lock_style)'
+read_only = ' 🔒'
+read_only_style = "bold #8FBCBB"
+fish_style_pwd_dir_length = 1
+truncation_length = 3
 truncate_to_repo = true
-read_only = ' '
 
 [hostname]
 ssh_only = true
@@ -30,6 +39,45 @@ format = '[$hostname in]($style) '
 trim_at = '-'
 style = '#5fff5f'
 disabled = false
+
+[git_branch]
+format = '[$symbol](yellow bold)[$branch:$remote_name/$remote_branch]($style)'
+symbol = ' '
+always_show_remote = true
+only_attached = false
+truncation_length = 20
+
+[git_status]
+ahead = '⇡${count}(#EBCB8B) '
+diverged = '⇕⇡${ahead_count}⇣${behind_count}(#EBCB8B) '
+behind = '⇣[$count](#EBCB8B) '
+format = '[$all_status$ahead_behind]($style)'
+conflicted = '=×[$count](#D08770) '
+untracked = '?×[$count](#EBCB8B) '
+stashed = '\$×[$count](#5E81AC) '
+modified = '!×[$count](#8FBCBB) '
+renamed = '»×[$count](#D08770) '
+deleted = '✘×[$count](#BF616A) '
+disabled = false
+staged = '[++\($count\)](#A3BE8C)'
+
+[git_commit]
+style = 'bold #D08770'
+commit_hash_length = 8
+disabled = false
+only_detached = false
+tag_symbol = '🔖 '
+tag_disabled = false
+
+[git_metrics]
+added_style = 'bold #A3BE8C'
+deleted_style = 'bold #BF616A'
+format = '[+$added]($added_style)|[-$deleted]($deleted_style) '
+disabled = false
+
+[git_state]
+disabled = false
+
 [env_var.USER]
 disabled = true
 
@@ -62,17 +110,6 @@ disabled = true
 
 [elm]
 disabled = true
-
-[git_branch]
-symbol = ' '
-
-[git_metrics]
-format = '[+$added]($added_style)|[-$deleted]($deleted_style) '
-
-[git_status]
-ahead = '⇡${count}'
-diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
 
 [golang]
 disabled = true
