--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -283,7 +283,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="dedicated"
+gpu_type="all"
 
 
 # Resolution
@@ -526,7 +526,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(4 6 3 1 8 6)
 
 
 # Text Options
