fix a couple things

--- a/.config/pip/pip.conf
+++ b/.config/pip/pip.conf
@@ -1,6 +1,7 @@
 [global]
-default-timeout = 60
+default-timeout = 120
 allow-all-external = true
+disable-pip-version-check = true
 
 [user]
 disable-pip-version-check = true
@@ -11,3 +12,4 @@ use-mirrors = true
 
 [list]
 format = columns
+
