--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,6 +43,17 @@ setw -g clock-mode-colour colour1
 # Vim compatability
 set -sg escape-time 5 # fix vim esc delay
 
+# enable mouse
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+# easily toggle synchronization (e is for echo)
+# sends input to all panes in a given window.
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
 # This tmux statusbar was created by tmuxline.vim
 # on Thu, 19 Aug 2021 (gruvbox-dark)
 set -g status-justify "left"
