addet a couple of scripts

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -14,24 +14,23 @@ print_info() {
     info "DE" de
     # info "WM" wm
     # info "WM Theme" wm_theme
-    info "Theme" theme
+    # info "Theme" theme
     # info "Icons" icons
     info "Terminal" term
     # info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
-    info "Memory" memory
-
-    info "GPU Driver" gpu_driver  # Linux/macOS only
     info "CPU Usage" cpu_usage
+    info "Memory" memory
+    info "GPU Driver" gpu_driver  # Linux/macOS only
     info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
+    info "Battery" battery
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
     info "Public IP" public_ip
-    info "Users" users
+    # info "Users" users
     info "Locale" locale  # This only works on glibc systems.
 
     info cols
@@ -195,7 +194,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="on"
+speed_shorthand="off"
 
 # Enable/Disable CPU brand in output.
 #
@@ -232,7 +231,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="on"
+cpu_cores="logical"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -354,7 +353,7 @@ public_ip_host="http://ident.me"
 # Default: '2'
 # Values:  'int'
 # Flag:    --ip_timeout
-public_ip_timeout=7
+public_ip_timeout=5
 
 
 # Desktop Environment
@@ -551,7 +550,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char="—"
 
 
 # Info Separator
@@ -798,7 +797,7 @@ image_loop="off"
 #
 # Default: '~/.cache/thumbnails/neofetch'
 # Values:  'dir'
-thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
+thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/neofetch"
 
 # Crop mode
 #
@@ -851,7 +850,7 @@ xoffset=0
 # Default: ''
 # Values:  'color', 'blue'
 # Flag:    --bg_color
-background_color=
+background_color=''
 
 
 # Misc Options
