--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -4,7 +4,7 @@ background=#000000
 foreground=#eadab1
 cursor=#fcecc3
 color0=#32302f
-color1=#cc241d
+color1=#cd241d
 color2=#78970a
 color3=#d79921
 color4=#408083
