--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -93,8 +93,8 @@ set unicode_ellipsis false
 set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
-# default, jungle, snow, solarized
-set colorscheme monokai
+# default, jungle, snow, solarized, zenburn, monokai, rougarou
+set colorscheme zenburn
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
