--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -26,7 +26,7 @@ extra-keys = [[ \
    {key: RIGHT, popup: END}, \
    {key: DOWN, popup: PGDN}, \
    {key: UP, popup: PGUP}, \
-   {macro: "ALT l", display: "ls", popup: {macro: "ALT ~", display: "↝"}}, \
+   {macro: "ALT l", display: "ls", popup: {macro: "CTRL X~", display: "≥"}}, \
    {key: TAB, popup: {macro: "ENTER", display: "⏎"}} \
  ]]
 
@@ -116,7 +116,7 @@ disable-terminal-session-change-toast=true
 ###############
 
 ### Adjust terminal transscript rows:100-50000
-terminal-transcript-rows=5000
+terminal-transcript-rows=6000
 
 ###############
 # External apps
