--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -181,11 +181,11 @@ bind r source-file /data/data/com.termux/files/home/.config/tmux/tmux.conf \; di
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=#ebdbb2,bg=#504945"
+set -g message-command-style "fg=#dbcba2,bg=#504945"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=#7c6f64"
 set -g status-style "none,bg=#3c3836"
-set -g message-style "fg=#ebdbb2,bg=#504945"
+set -g message-style "fg=#dbcba2,bg=#504945"
 set -g pane-border-style "fg=#3c3836"
 set -g status-right-length "100"
 set -g status-left-length "100"
@@ -193,7 +193,7 @@ setw -g window-status-activity-style "underscore,fg=#a89984,bg=#3c3836"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#a89984,bg=#3c3836"
 set -g status-left "#[fg=#a89984,bg=#3c3836] #S:#P#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] Cntnm:#{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#32302f] %R "
+set -g status-right "#[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] Ctu:#{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#32302f] %R "
 setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I:#W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ebdbb2,bg=#504945] #I:#W #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]"
 
@@ -218,9 +218,8 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 #Restore all programs (dangerous!):
 # set -g @resurrect-processes ':all:'
-set -g @continuum-save-interval '5'
-set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'fullscreen'
+set -g @continuum-save-interval '9'
+# set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 TMUX_FZF_OPTIONS="-d 60% -m --preview-window 'down:6:wrap:border'"
 # TMUX_FZF_PREVIEW=1
