--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -1,8 +1,9 @@
 # gruvbox.dark.colors
 # Colorscheme from https://github.com/Mayccoll/Gogh
 background=#000000
-foreground=#eadab1
+foreground=#dbcba2
 cursor=#fcecc3
+
 color0=#32302f
 color1=#cd241d
 color2=#78970a
@@ -12,7 +13,7 @@ color5=#b16286
 color6=#689d6a
 color7=#a89984
 color8=#928374
-color9=#df352f
+color9=#fa3823
 color10=#a1b520
 color11=#fabd2f
 color12=#63a098
