--- a/.config/w3m/config
+++ b/.config/w3m/config
@@ -75,7 +75,7 @@ index_file
 mime_types ~/.mime.types, /data/data/com.termux/files/usr/etc/mime.types
 mailcap ~/.w3m/mailcap, /data/data/com.termux/files/usr/etc/w3m/mailcap
 urimethodmap ~/.w3m/urimethodmap, /data/data/com.termux/files/usr/etc/w3m/urimethodmap
-editor micro
+editor nvim
 mailto_options 1
 mailer
 extbrowser lynx
@@ -89,12 +89,12 @@ extbrowser8
 extbrowser9
 bgextviewer 1
 use_lessopen 1
-passwd_file ~/.config/w3m/passwd
+passwd_file /data/data/com.termux/files/usr/home/.config/w3m/passwd
 disable_secret_security_check 1
 ftppasswd
 ftppass_hostnamegen 1
-pre_form_file ~/.config/w3m/pre_form
-siteconf_file ~/.config/w3m/siteconf
+pre_form_file /data/data/com.termux/files/usr/home/.config/w3m/pre_form
+siteconf_file /data/data/com.termux/files/usr/home/.config/w3m/siteconf
 user_agent
 no_referer 0
 accept_language en;q=1.0
