--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -1,16 +1,12 @@
 {
-    "aspell.dict": "en",
-    "aspell.lang": "en",
-    "aspell.sugmode": "fast",
     "backupdir": "~/.config/micro/backups",
     "basename": true,
     "colorscheme": "gruvbox-dark",
     "diffgutter": true,
     "filemanager.compressparent": false,
-    "filemanager.showignored": false,
+    "filemanager.foldersfirst": false,
     "keepautoindent": true,
     "keymenu": true,
-    "literate": false,
     "mkparents": true,
     "parsecursor": true,
     "permbackup": true,
