--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -94,7 +94,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized, zenburn, monokai, rougarou
-set colorscheme zenburn
+set colorscheme monokai
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
