--- a/.termux/colors.properties
+++ b/.termux/colors.properties
@@ -1,12 +1,13 @@
 # gruvbox.dark.colors
 # Colorscheme from https://github.com/Mayccoll/Gogh
+# Configured
 background=#000000
-foreground=#dbcba2
+foreground=#ebdbb2
 cursor=#fcecc3
 
-color0=#32302f
-color1=#cd241d
-color2=#78970a
+color0=#1d2021
+color1=#cc241d
+color2=#81971a
 color3=#d79921
 color4=#408083
 color5=#b16286
@@ -16,8 +17,36 @@ color8=#928374
 color9=#fa3823
 color10=#a1b520
 color11=#fabd2f
-color12=#63a098
+color12=#83a098
 color13=#d3869b
 color14=#8ec07c
 color15=#ebdbb2
 
+# ! hard contrast: background: #1d2021
+# background: #1d2021
+# ! background: #282828
+# ! soft contrast: background: #32302f
+# ! Black + DarkGrey
+# color0:  #282828
+# color8:  #928374
+# ! DarkRed + Red
+# color1:  #cc241d
+# color9:  #fb4934
+# ! DarkGreen + Green
+# color2:  #98971a
+# color10: #b8bb26
+# ! DarkYellow + Yellow
+# color3:  #d79921
+# color11: #fabd2f
+# ! DarkBlue + Blue
+# color4:  #458588
+# color12: #83a598
+# ! DarkMagenta + Magenta
+# color5:  #b16286
+# color13: #d3869b
+# ! DarkCyan + Cyan
+# color6:  #689d6a
+# color14: #8ec07c
+# ! LightGrey + White
+# color7:  #a89984
+# color15: #ebdbb2
