--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -26,16 +26,19 @@ extra-keys = [[ \
    {key: RIGHT, popup: END}, \
    {key: DOWN, popup: PGDN}, \
    {key: UP, popup: PGUP}, \
-   {macro: "ALT l", display: "ls", popup: {macro: "CTRL X~", display: "≥"}}, \
+   {macro: "ALT l", display: "ls", popup: {macro: "CTRL X CTRL R", display: "^X^R"}}, \
    {key: TAB, popup: {macro: "ENTER", display: "⏎"}} \
  ]]
+
+# Termux extra keys height
+terminal-toolbar-height = 0.8
 
 ###############
 # Colors/themes
 ###############
 
 ### Force black colors for drawer and dialogs
-#use-black-ui = true
+use-black-ui = true
 
 ###############
 # Full screen
@@ -84,7 +87,7 @@ bell-character = ignore
 back-key=back
 
 ###############
-# Cursor
+# General
 ###############
 
 ### Cursor style: block is default
@@ -94,33 +97,39 @@ terminal-cursor-style=bar
 ### Cursor blinking rate
 terminal-cursor-blink-rate=600
 
-###############
-# Keyboard issue workarounds
-###############
-
 ### Letters might not appear until enter is pressed on Samsung devices
 enforce-char-based-input = true
 
 ### ctrl+space (for marking text in emacs) does not work on some devices
 #ctrl-space-workaround = true
 
-###############
-# Session toast
-###############
-
 ### Disable terminal session change toast
 disable-terminal-session-change-toast=true
-
-###############
-# Transscript rows
-###############
 
 ### Adjust terminal transscript rows:100-50000
 terminal-transcript-rows=6000
 
-###############
-# External apps
-###############
-
 ### (Dis)Allow external apps (false/true)
 allow-external-apps=true
+
+# Margin 0 - 100
+terminal-margin-horizontal = 0
+
+terminal-margin-vertical = 0
+
+# Open Url's
+terminal-onclick-url-open = true
+
+### Default working directory that will be used when launching the app.
+# default-working-directory = /data/data/com.termux/files/home
+
+### Uncomment to not show soft keyboard on application start.
+# hide-soft-keyboard-on-startup = true
+
+### Uncomment to let keyboard toggle button to enable /disable software
+### keyboard instead of showing/hiding it.
+# soft-keyboard-toggle-behaviour = enable/disable
+
+### Uncomment to use volume keys for adjusting volume and not for the
+### extra keys functionality.
+# volume-keys = volume
